--- a/CSS/style.css
+++ b/CSS/style.css
@@ -172,8 +172,6 @@ header .main-nav {
     justify-content: center;
     align-items: center;
 }
-header .main-nav > li{
-}
 header .main-nav > li > a{
     display: block;
     height: 72px;
@@ -331,8 +329,6 @@ header .container .main-nav .mega-menu .links a i{
         height: 72px;
     }
 }
-.landing .container .text {
-}
 /* Mobile Screen */
 @media (max-width: 767px) {
     .landing .container .text {
@@ -351,8 +347,6 @@ header .container .main-nav .mega-menu .links a i{
     color: var(--text-color);
     max-width: 500px;
     margin-top: 0;
-}
-.landing .container .image{
 }
 .landing .container .image img{
     width: 600px;
@@ -699,10 +693,95 @@ header .container .main-nav .mega-menu .links a i{
     color: var(--yellow);
 }
 /* End Testimonials */
+/* Start Team-Members */
+.team-members {
+    position: relative;
+    padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+}
+.team-members .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(300px , 1fr));
+    gap: 30px;
+}
+.team-members .container .box {
+    position: relative;
+}
+.team-members .container .box::before , .team-members .container .box::after{
+    content: '';
+    position: absolute;
+    right: 0;
+    top:0;
+    height: 100%;
+    border-radius: 10px;
+    transition: var(--transition-time);
+}
+.team-members .container .box::before {
+    width: calc(100% - 60px);
+    background-color: var(--section-color);
+    z-index: -2;
+}
+.team-members .container .box::after {
+    z-index: -1;
+    width: 0;
+    background-color: #e4e4e4;
+}
+.team-members .container .box:hover::after {
+    width: calc(100% - 60px);
+}
+.team-members .container .box .content img {
+    width: calc(100% - 60px) ;
+    border-radius: 10px; 
+    transition: var(--transition-time);
+}
+.team-members .container .box:hover .content img {
+    filter: grayscale(100%);
+}
+.team-members .container .box .content {
+    display: flex;
+    align-items: center;
+    padding-top: 60px;
+}
+.team-members .container .box .content .icons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 60px;
+}
+.team-members .container .box .content .icons a {
+    width: 60px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.team-members .container .box .content .icons i {
+    color:var(--text-color);
+}
+.team-members .container .box .content .icons i:hover {
+    color: var(--main-color);
+}
+.team-members .container .box .text {
+    padding-left: 80px;
+    padding-bottom: 40px;
+}
+.team-members .container .box .text h3{
+    color: var(--main-color);
+    margin-bottom: 0;
+    font-weight: bold;
+    transition: var(--transition-time);
+}
+.team-members .container .box:hover .text h3{
+    color: var(--text-color);
+}
+.team-members .container .box .text p{
+    color:var(--text-color);
+}
+/* End Team-Members */
 /* Start Animation */
 /* Animation up and down */
 @keyframes up-and-down {
-    0% , 100% {
+    0% , 100% {     
         top: 0;
     }
     50% {
